# AbstractVision

./: .gitignore  ACKNOWLEDMENTS.md  CHANGELOG.md  CONTRIBUTING.md  README.md  SECURITY.md  llms.txt  pyproject.toml  requirements.txt  setup.py
docs/: README.md  api.md  architecture.md  faq.md  getting-started.md
docs/backlog/: README.md  template.md
docs/backlog/completed/: 001_generative_vision_backends_qwen_wan_hunyuan.md  002_generative_vision_abstraction_api_and_backends.md  003_hf_model_landscape_and_capability_registry.md  004_capability_schema_and_validation.md  005_core_api_tasks_and_abstractions.md  006_openai_compatible_backend_for_image_and_video.md  007_local_hf_backend_strategy_diffusers.md  008_asset_outputs_and_third_party_integration.md  009_test_matrix_and_ci_for_capabilities.md  010_readme_and_examples_for_model_selection.md  011_abstractcore_tool_integration_and_artifact_refs.md  012_packaging_extras_and_release_hygiene.md  013_cli_repl_for_manual_testing.md  013_stable_diffusion_cpp_gguf_backend.md
docs/backlog/planned/: 001_generative_vision_backends_qwen_wan_hunyuan.md  007_local_hf_backend_strategy_diffusers.md  012_packaging_extras_and_release_hygiene.md
docs/reference/: abstractcore-integration.md  artifacts.md  backends.md  capabilities-registry.md  configuration.md
playground/: README.md  vision_playground.html
src/abstractvision/: __init__.py  artifacts.py  cli.py  errors.py  model_capabilities.py  types.py  vision_manager.py
src/abstractvision/assets/: vision_model_capabilities.json
src/abstractvision/backends/: __init__.py  base_backend.py  huggingface_diffusers.py  openai_compatible.py  stable_diffusion_cpp.py
src/abstractvision/integrations/: __init__.py  abstractcore.py  abstractcore_plugin.py
tests/: test_abstractcore_plugin.py  test_abstractcore_tool_integration.py  test_artifact_outputs.py  test_capabilities_schema_validation.py  test_capability_registry_coverage.py  test_cli_smoke.py  test_huggingface_diffusers_backend.py  test_manager_capability_checks.py  test_openai_compatible_backend.py  test_stable_diffusion_cpp_backend.py  test_vision_model_capabilities.py
