[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "abstractvision"
dynamic = ["version"]
description = "Model-agnostic generative vision abstractions (image/video) for the Abstract ecosystem"
readme = "README.md"
license = {text = "MIT"}
authors = [{name = "Laurent-Philippe Albou", email = "contact@abstractcore.ai"}]
requires-python = ">=3.8"
classifiers = [
  "Development Status :: 3 - Alpha",
  "Intended Audience :: Developers",
  "License :: OSI Approved :: MIT License",
  "Operating System :: OS Independent",
  "Programming Language :: Python :: 3",
  "Programming Language :: Python :: 3.8",
  "Programming Language :: Python :: 3.9",
  "Programming Language :: Python :: 3.10",
  "Programming Language :: Python :: 3.11",
  "Topic :: Multimedia",
  "Topic :: Scientific/Engineering :: Artificial Intelligence",
]
# Batteries-included by default: users should only need to download model weights.
# NOTE: This is intentionally heavy (torch + diffusers + stable-diffusion.cpp bindings).
dependencies = [
  "diffusers>=0.36.0",
  "torch>=2.0,<3.0.0",
  "transformers>=4.0,<6.0.0",
  "accelerate>=0.0",
  "safetensors>=0.0",
  # Needed by T5 tokenizers used in SD3/FLUX and some other diffusion pipelines.
  "sentencepiece>=0.1.99",
  # Some HF tokenizers/pipelines require protobuf at runtime.
  "protobuf>=3.20.0",
  # Used by some modern diffusion architectures.
  "einops>=0.7.0",
  # LoRA adapter support in Diffusers.
  "peft>=0.10.0",
  "Pillow>=9.0",
  "stable-diffusion-cpp-python>=0.4.2",
]

[project.urls]
Homepage = "https://github.com/abstractcore/abstractvision"
Repository = "https://github.com/abstractcore/abstractvision"

[project.scripts]
abstractvision = "abstractvision.cli:main"

[project.entry-points."abstractcore.capabilities_plugins"]
abstractvision = "abstractvision.integrations.abstractcore_plugin:register"

[project.optional-dependencies]
# OpenAI-compatible HTTP backend is stdlib-only today; keep the extra for forward compatibility.
openai-compatible = []

# Local generation via stable-diffusion.cpp python bindings (pip-installable).
sdcpp = [
  "stable-diffusion-cpp-python>=0.4.2",
]

# Local generation via Diffusers (heavy deps; opt-in).
huggingface = [
  "diffusers>=0.36.0",
  "torch>=2.0",
  "transformers>=4.0",
  "accelerate>=0.0",
  "safetensors>=0.0",
  "Pillow>=9.0",
]

# Convenience: installs both local backends (Diffusers + stable-diffusion.cpp python bindings).
local = [
  "stable-diffusion-cpp-python>=0.4.2",
  "diffusers>=0.36.0",
  "torch>=2.0",
  "transformers>=4.0",
  "accelerate>=0.0",
  "safetensors>=0.0",
  "Pillow>=9.0",
]

# Diffusers "main" is required for some newer pipelines (e.g. GLM-Image, FLUX.2-klein-4B) that are not yet available
# in the latest PyPI release. Runtime remains offline-only; this is purely an install-time choice.
huggingface-dev = [
  "diffusers @ git+https://github.com/huggingface/diffusers@main",
  "torch>=2.0",
  "transformers>=5.0",
  "accelerate>=0.0",
  "safetensors>=0.0",
  "Pillow>=9.0",
]

# Tool integration module (optional import). Kept optional to avoid circular deps with AbstractCore.
abstractcore = ["abstractcore>=2.0.0"]

[tool.setuptools]
packages = [
  "abstractvision",
  "abstractvision.backends",
  "abstractvision.integrations",
]

[tool.setuptools.package-dir]
"" = "src"

[tool.setuptools.dynamic]
version = {attr = "abstractvision.__version__"}

[tool.setuptools.package-data]
abstractvision = ["assets/*.json"]
